<resources>
    <string name="app_name">MITSUBSHI</string>
    <string name="activity_login_company">chinetek 上海辰达 @2017</string>
    <string name="login_login">登陆</string>
    <string name="login_ver">版本：</string>
    <string name="login_setting">设置</string>
    <string name="login_setting_BarcodeRule">设置-条码规则</string>
    <string name="login_setting_ToMail">设置-收件人</string>
    <string name="login_operator">操作人</string>
    <string name="main">主界面</string>
    <string name="filter">筛选条件</string>
    <string name="filterQuery">筛选</string>
    <string name="outputscan">出库</string>
    <string name="qrscan">QR扫描</string>
    <string name="MaterialSelect">物料数据选择</string>
    <string name="exceptionList">异常处理</string>
    <string name="Query">出库查询</string>
    <string name="sync">基础数据同步</string>
    <string name="deliveryScan">出库扫描</string>
    <string name="startOutput">开始出库扫描</string>
    <string name="config">修改保存</string>
    <string name="outputlist">单据列表</string>
    <string name="barcodeDetail">条码明细</string>
    <string name="barcodeException">错误信息</string>
    <string name="sumbit">提交</string>
    <string name="dowm">下载</string>
    <string name="Select">全选</string>
    <string name="close">完毕</string>
    <string name="Bulkupload">批量上报</string>
    <string name="MaterialQuery">物料查询</string>
    <string name="DNsync">MAPS单据同步</string>
    <string name="FTPDNChoice">单据下载</string>
    <string name="Reason">异常原因：</string>
    <string name="ExceptionScan">异常扫描</string>
    <string name="BarcodeScan">异常扫描</string>
    <string name="DeleteException">删除异常序列号</string>
    <string name="ScanDetails">序列号扫描</string>
    <string name="Setting_QRTitle">QR服务器设置</string>
    <string name="Setting_MAilTitle">邮件服务器设置</string>
    <string name="Setting_MAilAccount">账号：</string>
    <string name="Setting_MAilPassword">密码：</string>
    <string name="Setting_MAilPort">SMTP端口：</string>
    <string name="Setting_MAilSMTP">SMTP地址：</string>
    <string name="Setting_MAilIMAP">IMAP地址：</string>
    <string name="Setting_TOMAil">收件邮箱设置</string>
    <string name="Setting_IPAdress">服务器：</string>
    <string name="Setting_FtpUser">用户名：</string>
    <string name="Setting_FtpDown">下载目录：</string>
    <string name="Setting_FtpUp">上传目录：</string>
    <string name="Setting_Partnerr">代理商编号</string>
    <string name="Setting_Remark">启用备注栏</string>
    <string name="Setting_NotSLCodde">启用非三菱条码</string>
    <string name="Setting_IsAgentSoft">启用代理商版本(欧菱)</string>
    <string name="Setting_SaveTime">出库单保存时间</string>
    <string name="Setting_SysPassword">修改管理员密码</string>
    <string name="Setting_DNRule">自定义出库单规则</string>
    <string name="Setting_serialnoaxlength">设置序列号最大长度</string>
    <string name="Setting_thirdInterface">设置第三方接口</string>
    <string name="Setting_Port">端口：</string>
    <string name="Setting_Serverpart">服务后缀：</string>
    <string name="Setting_thirdUser">用户名：</string>
    <string name="Setting_thirdPass">密码：</string>
    <string name="Setting_TimeOut">超时时间：</string>
    <string name="Setting_Second">秒</string>
    <string name="Setting_LogUpload">日志上报</string>
    <string name="Setting_Save">保存</string>
    <string name="Setting_ParaUpload">参数上传</string>
    <string name="Setting_Clear">重置</string>
    <string name="Setting_add">新增</string>
    <string name="Setting_StartWords">起始字符：</string>
    <string name="Setting_outnum">出库数量：</string>
    <string name="Setting_outremark">备注：</string>
    <string name="Setting_serialnomax">最大序列号长度：</string>
    <string name="Setting_BarcodeLength">条码长度：</string>
    <string name="Setting_IndexLength">序号长度：</string>
    <string name="Setting_KeyStartIndex">比对项起始位：</string>
    <string name="Setting_KeyEndIndex">比对项结束位：</string>
    <string name="Setting_SerialStartIndex">序列号起始位：</string>
    <string name="Setting_SerialEndIndex">序列号结束位：</string>
    <string name="Setting_OtherStartIndex">其他项起始位：</string>
    <string name="Setting_OtherEndIndex">其他项结束位：</string>
    <string name="Setting_Other">其他项设置</string>
    <string name="Setting_ADD">添加</string>
    <string name="materialQuery_Code">产品编号：</string>
    <string name="materialQuery_Item">产品型号：</string>
    <string name="materialQuery_ItemLine">产品线：</string>
    <string name="materialQuery_ShowCount">显示数：</string>
    <string name="sendType">发货方式：</string>
    <string name="barRules">非三菱规则：</string>
    <string name="sendCompany">类型：</string>
    <string name="choiceSendType">请选择发货方式：</string>
    <string name="choiceItemLine">请选择产品线：</string>
    <string name="choiceShowCount">请选择显示最大记录数：</string>
    <string name="choiceBarRules">请选择解析规则：</string>
    <string name="choiceSendCusttom">请选择收货方：</string>
    <string name="supplier">收货方：</string>
    <string name="custom">收货方：</string>
    <string name="DNCreatetime">单据时间：</string>
    <string name="createtime">创建时间：</string>
    <string name="submittime">提交时间：</string>
    <string name="submituser">最后提交人：</string>
    <string name="overtime">完成时间：</string>
    <string name="barcode">条码:</string>
    <string name="GolfaCode">GolfaCode:</string>
    <string name="Pickdata">出厂日期:</string>
    <string name="scanQty">扫描数量：</string>
    <string name="dnQty">出库数量：</string>
    <string name="lineNo">行号：</string>
    <string name="RowNo">序号：</string>
    <string-array name="sendTypeList">
        <item>MAPS</item>
        <item>邮件</item>
        <item>FTP</item>
        <item>自建</item>
        
        <item>二维码</item>
    </string-array>
    <string-array name="sendTypeListAgent">
        <item>MAPS</item>
        <item>邮件</item>
        <item>FTP</item>
        <item>自建</item>
        
        <item>二维码</item>
        <item>欧菱</item>
    </string-array>
    <string-array name="ExportTypeList">
        <item>邮件</item>
        <item>FTP</item>
        
    </string-array>
    <string-array name="DNStatus">
        <item>异常</item>
        <item>未下载</item>
        <item>已下载</item>
        <item>完成</item>
        <item>已提交</item>
        <item>单据重复</item>
    </string-array>
    <string-array name="sendCustomList">
        <item>代理商</item>
        <item>客户</item>
    </string-array>
    <string-array name="sendCustomListy">
        <item>下属</item>
        <item>所有</item>
    </string-array>
    <string-array name="DNSaveTime">
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>150</item>
    </string-array>
    <string-array name="Material_ShowCount">
        <item>100</item>
        <item>300</item>
        <item>500</item>
        <item>800</item>
        <item>1000</item>
    </string-array>
    <string-array name="Model">
        <item>TC75</item>
        <item>A15_A5</item>
        <item>50 SERIES</item>
    </string-array>
    <string name="hint_inputDeliveryNo">输入/扫描出库单</string>
    <string name="hint_inputNoOrCustom">输入出库单号或客户名称</string>
    <string name="hint_inputItemName">请输入产品型号</string>
    <string name="hint_inputCode">请输入编号或GolfaCode</string>
    <string name="hint_starttime">请选择开始时间</string>
    <string name="hint_endtime">请选择结束时间</string>
    <string name="Msg_SaveSuccess">保存成功！</string>
    <string name="Msg_Login">登陆验证中...</string>
    <string name="Msg_inputNumic">请输入数字！</string>
    <string name="Msg_notEmpty">输入数据不能为空！</string>
    <string name="Msg_notLess">输入数字不能小于0！</string>
    <string name="Msg_lenMax">起始字符长度+序号长度不能超过8位！</string>
    <string name="Msg_BarcodeNotmatch">条码不匹配！</string>
    <string name="Msg_ExceptionDN">出库单存在异常\n请至异常模块处理！</string>
    <string name="Msg_DNNORepert">出库单单号与后台重复\n请更改单号之后提交</string>
    <string name="Msg_InputPassword">请输入管理员密码</string>
    <string name="Msg_Inputname">请输入扫描规则名称</string>
    <string name="Msg_SetbarcodeRule">请设置条码规则</string>
    <string name="Msg_ModifyCus">修改客户名称</string>
    <string name="Msg_maxlength">请设置序列号最大长度</string>
    <string name="Msg_InputCustom">请输入代理商编号</string>
    <string name="Msg_InputScanQty">请输入出库数量</string>
    <string name="Msg_InpuCUSGF">请输入自定义GolfaCode</string>
    <string name="Msg_ChoiceSaveTime">请选择保存时间（天）</string>
    <string name="Msg_PasswordError">管理员密码错误!</string>
    <string name="Msg_UploadSuccess">导出成功!\n导出出库单数：</string>
    <string name="Msg_DNUploadSuccess">出库单提交成功!</string>
    <string name="Msg_bolkDNUploadSuccess">批量出库单提交完成!</string>
    <string name="Msg_DNSuccess">出库单完成数：</string>
    <string name="Msg_UploadFailue">导出失败!\n失败原因：</string>
    <string name="Msg_MitMaterialS">所选单据中存在物料无法确定唯一性\n请处理后再下载</string>
    <string name="Msg_ExitDn">出库单号已存在，请确认后导入！\n</string>
    <string name="Msg_ScanMaterial">没有可以提交的扫描数据</string>
    <string name="Msg_ImportDNError">DN导入失败!\n非代理商单据\n</string>
    <string name="Msg_ImportDNDetailError">单据无可扫描行数据\n（物料属性不符合导致）\n</string>
    <string name="Msg_ImportDNDFormatError">\n导入数据行格式错误（可能包含“,”）</string>
    <string name="Msg_ImportNoDNno">\n导入数据行缺少单据编号</string>
    <string name="Msg_QRScanFormatr">QR扫描单据格式不正确！</string>
    <string name="Msg_QRMulitMaterial">所选单据中存在物料无法确定唯一性\n请重新扫描处理！</string>
    <string name="Msg_NotSupportModel">设备型号不支持！</string>
    <string name="Msg_No_Sync">无基础资料信息，请先同步！</string>
    <string name="Msg_No_Partner">请先设置代理商编号！</string>
    <string name="Msg_No_CusDnRule">请先设置自定义出库单规则！</string>
    <string name="Msg_Serial_Scaned">该条码已扫描！</string>
    <string name="Msg_No_DNno">出库单不存在！</string>
    <string name="Msg_No_DNDetail">出库单体数据不存在！</string>
    <string name="Msg_Delete_DN">是否删除出库单所有扫描记录？\n单号：</string>
    <string name="Msg_SerialNum_Finished">该物料扫码数量已超出出库数量！</string>
    <string name="Msg_Material_NotMatch">该物料不存在于出库单中！</string>
    <string name="Msg_NoSelect_CusCode">请选择客户或代理商</string>
    <string name="Msg_No_CusCode">请输入代理商或客户编号！</string>
    <string name="Msg_No_Barcode">请扫描条码！</string>
    <string name="Msg_No_PickDate">请输入出厂日期！</string>
    <string name="Msg_out_Barcode">扫描内容超出序列号范围！</string>
    <string name="Msg_Dn_Finished">出库单已关闭,不能提交数据！</string>
    <string name="Msg_DnScan_Finished">出库单已完成,不能修改！</string>
    <string name="Msg_Export_Type">请选择导出方式</string>
    <string name="Msg_Export_Format">请选择文件格式</string>
    <string name="Msg_New_Custom">新增客户</string>
    <string name="Msg_No_ExportDn">请选择需要导出的出库单</string>
    <string name="Msg_No_DeleteDn">请选择需要删除的出库单</string>
    <string name="Msg_No_DirExportDn">不存在需要导出的出库单单据！</string>
    <string name="Msg_Upload_DN">出库单存在未完成项，是否提交之后关闭单据?</string>
    <string name="Msg_Upload_DNSelf">是否提交之后关闭单据?</string>
    <string name="Msg_ToMailExit">收件人邮箱已设置！</string>
    <string name="Msg_ToMailNotSet">收件人邮箱未设置！</string>
    <string name="Msg_HaveSameDN">该出库单号已存在！</string>
    <string name="Msg_ScnaQtyError">物料扫码数量不能大于出库数量！</string>
    <string name="Msg_miltuMaterial">存在未修改物料信息，请确认！</string>
    <string name="Dia_UploadLogFile">日志文件上传中...</string>
    <string name="Dia_SyncMaterial">正在同步物料数据...</string>
    <string name="Dia_SyncCus">正在同步客户和代理商...</string>
    <string name="Dia_UploadCus">正在上传新增客户信息...</string>
    <string name="Dia_DeleteCus">正在修改客户信息...</string>
    <string name="Dia_UploadDN">正在上传出库单...</string>
    <string name="Dia_GetDNDetailItems">获取已关闭出库单...</string>
    <string name="Dia_DeleteDn">是否删除已选中单据的扫描记录？</string>
    <string name="Dia_DeleteExDn">是否删除所有异常单据？</string>
    <string name="Dia_SyncPara">正在同步参数设置...</string>
    <string name="Dia_SyncDeleteDN">正在同步已删除出库单...</string>
    <string name="Dia_UploadPara">正在上传参数设置...</string>
    <string name="Dia_SyncDn">通过MAPS形式获取出库单...</string>
    <string name="Dia_SyncMail">通过邮件形式获取出库单...</string>
    <string name="Dia_UploadMail">通过邮件形式导出出库单...</string>
    <string name="Dia_UploadMailM">通过邮件形式导出物料...</string>
    <string name="Dia_SyncUSB">通过USB形式导入出库单...</string>
    <string name="Dia_UploadUSB">通过USB形式导出出库单...</string>
    <string name="Dia_UploadUSBM">通过USB形式导出物料...</string>
    <string name="Dia_SyncFTP">通过FTP形式导入出库单...</string>
    <string name="Dia_SyncInterface">通过接口形式导入出库单...</string>
    <string name="Dia_UploadFtp">通过FTP形式导出出库单...</string>
</resources>