<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextViewComminStyleThemegreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Setting_IPAdress"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView254"
        style="@style/TextViewComminStyleThemegreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Setting_Port"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView255"
        style="@style/TextViewComminStyleThemegreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Setting_TimeOut"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView254" />

    <TextView
        android:id="@+id/textView256"
        style="@style/TextViewComminStyleThemegreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/Setting_Second"
        app:layout_constraintBottom_toBottomOf="@+id/textView255"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edt_IPAdress"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="请输入服务器地址"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edt_Port"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="请输入服务器端口"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView254"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView254" />

    <EditText
        android:id="@+id/edt_TimeOut"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="请输入超时时间"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView255"
        app:layout_constraintEnd_toStartOf="@+id/textView256"
        app:layout_constraintStart_toEndOf="@+id/textView255" />
</android.support.constraint.ConstraintLayout>
